@@ -71,6 +71,7 @@ Most of the functions *count*, *search*, *plot* terms, and *covert* between outp
 | `get_text`                   | modeling     | Get the original text for model tags              |
 | `coverage`                   | modeling     | Coverage for `term_count` or `search_term` object |
 | `uncovered`/`get_uncovered`  | modeling     | Get the uncovered text from a model               |
+| `mutate_termco`              | modeling     | Apply normalizing function to term count columns  |
 | `tag_co_occurrence`          | modeling     | Explore co-occurrence of tags from a model        |
 | `validate_model`/`assign_validation_task` | modeling | Human validation of a `term_count` model |
 | `read_term_list`             | read/write   | Read a term list from an external file            |
