@@ -66,6 +66,9 @@ NEW FEATURES
 * `test_regex` added to test an atomic vector, list, or term list of regexes for
   validity.
 
+* `mutate_termco` added to apply a normalizing function to all the term columns
+  of a `termco` object without stripping the attributes and class.
+
 MINOR FEATURES
 
 * `important_terms` picks up a plot method corresponding to the `frequent_terms`
@@ -73,6 +76,8 @@ MINOR FEATURES
 
 * `term_count` checks for duplicate categories within tiers for hierarchical
   term lists.
+
+* `read_term_list` checks for valid regex.
 
 IMPROVEMENTS
 
